docs: fixed spaces for consistency

--- a/src/generator/templates/sample.njk
+++ b/src/generator/templates/sample.njk
@@ -13,9 +13,13 @@
 // - Enable the API at:
 //   https://console.developers.google.com/apis/api/{{api.name}}.googleapis.com
 // - Login into gcloud by running:
-//   `$ gcloud auth application-default login`
+//   ```sh
+//   $ gcloud auth application-default login
+//   ```
 // - Install the npm module by running:
-//   `$ npm install googleapis`
+//   ```sh
+//   $ npm install googleapis
+//   ```
 
 const {google} = require('googleapis');
 const {{api.name}} = google.{{api.name}}('{{api.version}}');
